--- a/throun8f/src/css/button.css
+++ b/throun8f/src/css/button.css
@@ -1,8 +1,8 @@
-.combobox_transperant
-{
-
+.plus_minus{
+    -fx-background-color: transparent;
 }
-.datapicker_transperant
-{
-
+.search{
+    -fx-background-color: whitet;
+    -fx-border-color: white;
+    -fx-border-radius: 15px;
 }
